--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -104,7 +104,7 @@ theme: butterfly
 deploy:
   type: git
   repo: git@github.com:nycai/nycai.github.io.git
-  branch: main
+  branch: master
 
 menu:
   主页: / || fas fa-home
@@ -121,3 +121,19 @@ menu:
   留言板: /comment/ || fa fa-paper-plane
   #留言板: /messageboard/ || fa fa-paper-plane
   关于笔者: /about/ || fas fa-heart
+# Code Blocks (代码块样式)
+# --------------------------------------
+highlight_theme: mac #  darker / pale night / light / ocean / mac / mac light / false
+highlight_copy: true # copy button 是否显示复制按钮
+highlight_lang: true # show the code language 展示代码块语言
+highlight_shrink: false # true: 打开文章默认折叠代码块内容 / false: 打开文章默认展开代码块内容
+highlight_height_limit: false # unit: px
+code_word_wrap: true #是否关闭滚动条
+# Local search
+local_search:
+  enable: true
+  labels:
+    input_placeholder: Search for Posts
+    hits_empty: "We didn't find any results for the search: ${query}" # 如果没有查到内容相关内容显示
+
+
